[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksurvey"
version = "0.1.0"
description = "A library for analyzing Stack Overflow Survey data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
stacksurvey = "stacksurvey.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["stacksurvey"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
